--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # required configuration options
 name: Fusion
-version: 2024.7.1
+version: 2024.9.0b
 slug: ha_fusion
 description: A modern, easy-to-use and performant custom Home Assistant dashboard
 arch:
