Make unique for testing

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 # required configuration options
 name: Fusion
 version: 2024.9.0b
-slug: ha_fusion
+slug: ha_fusion_fork
 description: A modern, easy-to-use and performant custom Home Assistant dashboard
 arch:
   - aarch64
