--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: ha-fusion
+name: ha-fusion-fork
 url: https://github.com/matt8707/addon-ha-fusion
-maintainer: matt8707
+maintainer: matt8707 & lieven121
