Revert "Version bump"
This reverts commit 6c7a2d8f3812055034a1adad1b8b7e6bcc73dcc8.

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # required configuration options
 name: Fusion
-version: 2024.9.0b
+version: 2024.7.1
 slug: ha_fusion_fork
 description: A modern, easy-to-use and performant custom Home Assistant dashboard
 arch:
