Fix option != schema

--- a/config.yaml
+++ b/config.yaml
@@ -37,5 +37,5 @@ ports:
 # docker hub
 image: matt8707/addon-ha-fusion-{arch}
 
-options:
-  hass_url?: '' #optional
+schema:
+  hass_url?: str #optional
