--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # required configuration options
 name: Fusion
-version: 2024.7.1
+version: 2024.7.2
 slug: ha_fusion_fork
 description: A modern, easy-to-use and performant custom Home Assistant dashboard
 arch:
@@ -35,10 +35,11 @@ ports:
   8099/tcp: null
 
 # docker hub
-image: matt8707/addon-ha-fusion-{arch}
+# image: matt8707/addon-ha-fusion-{arch}
 
 options:
   hass_port: 8123
 
 schema:
   hass_url: str? #optional
+  hass_port: int
